[tool.poetry]
name = "test-work-form-validator"
version = "0.1.0"
description = ""
authors = ["Mikhail Panin <mokybrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tinydb = "^4.8.0"
fastapi = {extras = ["all"], version = "^0.104.1"}
phonenumbers = "^8.13.25"
httpx = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
